# TOOLS-RAINDANCE-pdfdecode

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  compare_outputs.py  inspect_pdf.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
src/pdf_decode/: cli.py  constants.py  extract.py  geometry.py  parser.py  processor.py  schema.py  table.py  utils.py
tests/: test_lint.py  test_regression.py
