[project]
name = "pdf-decode"
version = "0.1.0"
description = "Parser for Raindance e-invoices pdf-files"
authors = [
    { name = "Region Kronoberg" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pdfplumber>=0.10.3",
    "pydantic>=2.5.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.11"
]

[project.scripts]
pdf-decode = "pdf_decode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_decode"]